    (Matt Foley via suresh)

    HDFS-1811. Create scripts to decommission datanodes. (Erik Steffl)

    HDFS-1745. Federation: Fix fault injection test failures. (suresh)

    HDFS-1746. Federation: TestFileAppend3 fails intermittently. (jitendra)

    HDFS-1703. Improve start/stop scripts and add decommission tool for
    federation. (Tanping Wang, Erik Steffl via suresh)

   HDFS-1754. Federation: testFsck fails. (boryas)

  IMPROVEMENTS

    HDFS-1510. Added test-patch.properties required by test-patch.sh (nigel)

    HDFS-1628. Display full path in AccessControlException.  (John George
    via szetszwo)

    HDFS-1707. Federation: Failure in browsing data on new namenodes. 
    (jitendra)

    HDFS-1683. Test Balancer with multiple NameNodes.  (szetszwo)

    HDFS-1547. Improve decommission mechanism. (suresh)

    HDFS-1588. Remove hardcoded strings for configuration keys, "dfs.hosts"
    and "dfs.hosts.exlude". (Erik Steffl via suresh)

    HDFS-1117. Metrics 2.0 HDFS instrumentation. (Luke Lu)

    HDFS-1544. Ivy resolve force mode off by default. (Luke Lu)

    HDFS-1810. Remove duplicate jars from ivy. (Luke Lu)

    HDFS-1543. Remove system test artifacts from default build. (Luke Lu)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-1449. Fix test failures - ExtendedBlock must return 
    block file name in #getBlockName(). (suresh)

    HDFS-1680. Fix TestBalancer. (szetszwo)

    HDFS-1705. Balancer command throws NullPointerException. (suresh via
    szetszwo)

    HDFS-1559. Add missing UGM overrides to TestRefreshUserMappings
    (Todd Lipcon via eli)

    HDFS-1585. Fix build after HDFS-1547 (todd)

    HDFS-1684. Balancer cannot start with with multiple namenodes.  (szetszwo)

    HDFS-1445. Fast Snapshot via batch hardlinks. (Matt Foley)

    HDFS-1656. Fixes an issue to do with fetching of delegation tokens in
    HftpFileSystem. (Kan Zhang via ddas)

    HDFS-1809. Missing DefaultMetricsSystem initialization breaks some tests.
    (suresh)
